# insurance-ai-team

./: .gitignore  Dockerfile  Jenkinsfile  README.md  docker-build.sh  docker-push.sh  env.properties  h2022_indexing.py  introduce.txt  main.py  mypy.ini  project_structure.txt  pyproject.toml  requirements-server.txt  requirements.txt  server.py  structure.txt  test_h2022_indexing.py
agents/llm_providers/: llm_ollama.py  llm_openai.py
agents/orchestrator/: manager_agent.py
agents/team/customer_insight/: customer_insight_agent.py
agents/team/product/: product_strategy_agent.py
base/: __init__.py  data_analyzer_base.py  data_loader_base.py  llm_base.py  model_base.py  service_base.py
base/agent/: agent_base.py  llm_base.py
base/rag/: __init__.py  document_loader_base.py  embedding_base.py  indexer_base.py  preprocessor_base.py  reranker_base.py  retriever_base.py  vector_store_base.py
config/: __init__.py  logging_config.py  settings.py
database/: db_connection.py
factories/: __init__.py  agent_factory.py  llm_factory.py  service_factory.py
k8s/: deploy.t  deploy.yaml  ingress.yaml  secret.yaml  service.t  service.yaml
llm/: llm_ollama.py
models/: __init__.py  agent_model.py  h2022_document_model.py  insurance_model.py  review_model.py  tool_model.py
rag/common/: __init__.py  ollama_embedder.py  openai_embedder.py  processor.py  retriever.py
rag/insurance/h2022/: __init__.py  h2022_document_loader.py  h2022_embedding.py  h2022_indexer.py  h2022_preprocessor.py  h2022_vector_store.py
services/insurance/h2022/: insurance_2022_data_analyzer.py
services/insurance/h2023/: insurance_2023_service.py
services/llm/: code_processor.py
services/review/: review_data_analyzer.py  review_service.py
tools/: __init__.py
tools/code_generator/: __init__.py  visualization_tool.py
tools/data_collector/: arxiv_tool.py  news_search_tool.py
tools/llm/: llm_service.py  visualization_generator.py
tools/rag/: __init__.py  contextual_compression.py  hyde.py  multi_query.py  self_query.py
tools/review/: review_data_loader.py
utils/: profiler.py
utils/data/: all_insurance_csv_loader.py  insurance_2022_data_analyzer.py  insurance_2023_data_analyzer.py
utils/handler/: csv_handler.py  embedding_model_handler.py  llm_model_handler.py
(+8 files in other folders)
